# iota

./: .gitignore  Makefile  Makefile.am  README  TODO  configure.ac  core.c  core.h  counterd.c  sampled.c
src/: core.c  counterd.c  iota.h  sampled.c
t/: 01-variance.c  test.h
util/: count  sample
